--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,32 @@ edition = "2024"
 version = "0.1.0"
 authors = ["Brian Kiernan <brian@algochuck.com>"]
 license = "MIT"
+
+[workspace.lints.clippy]
+# Enable common clippy lint groups
+pedantic = "warn"
+nursery = "warn"
+cargo = "warn"
+
+# Allow some pedantic lints that can be overly strict
+module_name_repetitions = "allow"
+missing_errors_doc = "allow"
+missing_panics_doc = "allow"
+must_use_candidate = "allow"
+
+# Deny some important lints
+unwrap_used = "deny"
+expect_used = "deny"
+panic = "deny"
+todo = "warn"
+unimplemented = "deny"
+
+# Performance and correctness
+clone_on_ref_ptr = "deny"
+rc_buffer = "deny"
+rc_mutex = "deny"
+
+[workspace.lints.rust]
+unsafe_code = "forbid"
+missing_docs = "warn"
+rust_2018_idioms = "warn"
