--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,10 @@ tokio = { version = "1.0", default-features = false }
 uuid = { version = "1.0", default-features = false }
 url = { version = "2.5", default-features = false }
 
+# Additional dependencies used by CLI
+base64 = "0.22"
+rand = "0.8"
+
 [workspace.lints.clippy]
 # Enable common clippy lint groups (with lower priority than individual lints)
 pedantic = { level = "warn", priority = -1 }
