--- a/crates/schwab-api-oauth/Cargo.toml
+++ b/crates/schwab-api-oauth/Cargo.toml
@@ -14,5 +14,5 @@ thiserror = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
 reqwest = { workspace = true, features = ["json", "rustls-tls"] }
 url = { workspace = true }
-base64 = "0.22"
-rand = "0.8"
+base64 = { workspace = true }
+rand = { workspace = true }
