--- a/tools/algo-chuck-cli/Cargo.toml
+++ b/tools/algo-chuck-cli/Cargo.toml
@@ -19,7 +19,7 @@ config = "0.15"
 dirs = "6.0"
 rcgen = "0.14"
 reqwest = { workspace = true }
-rustls = "0.23"
+rustls = { version = "0.23", features = ["ring"] }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
