--- a/tools/algo-chuck-cli/Cargo.toml
+++ b/tools/algo-chuck-cli/Cargo.toml
@@ -20,6 +20,7 @@ dirs = "6.0"
 rcgen = "0.14"
 reqwest = { workspace = true }
 rustls = { version = "0.23", features = ["ring"] }
+rustls-pemfile = "2.0"
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
@@ -34,6 +35,11 @@ webbrowser = "1.0"
 chacha20poly1305 = "0.10"
 argon2 = "0.5"
 rand = { workspace = true }
+
+# CA and certificate management
+hex = "0.4"
+sha2 = "0.10"
+time = "0.3"
 
 # Logging and tracing
 # tracing = "0.1"
