--- a/crates/schwab-api-core/Cargo.toml
+++ b/crates/schwab-api-core/Cargo.toml
@@ -9,8 +9,10 @@ description = "Core traits, errors, and foundational functionality for the Schwa
 [dependencies]
 schwab-api-types = { path = "../schwab-api-types" }
 serde = { workspace = true, features = ["derive"] }
+serde_json = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
 reqwest = { workspace = true }
 url = { workspace = true }
 async-trait = { workspace = true }
+http = { workspace = true }
