--- a/crates/schwab-api-trader/Cargo.toml
+++ b/crates/schwab-api-trader/Cargo.toml
@@ -15,3 +15,4 @@ thiserror = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
 reqwest = { workspace = true }
 async-trait = { workspace = true }
+serde_json = { workspace = true }
