--- a/tools/algo-chuck-cli/Cargo.toml
+++ b/tools/algo-chuck-cli/Cargo.toml
@@ -7,7 +7,11 @@ license.workspace = true
 description = "Command-line interface for the Schwab API toolkit"
 
 [dependencies]
+schwab-api-core = { path = "../../crates/schwab-api-core" }
+schwab-api-trader = { path = "../../crates/schwab-api-trader" }
+schwab-api-types = { path = "../../crates/schwab-api-types" }
 anyhow = { workspace = true }
+async-trait = { workspace = true }
 base64 = { workspace = true }
 chrono = { workspace = true, features = ["serde", "clock"] }
 clap = { version = "4.4", features = ["derive"] }
