pass request into execute

--- a/crates/schwab-api-trader/Cargo.toml
+++ b/crates/schwab-api-trader/Cargo.toml
@@ -16,3 +16,4 @@ tokio = { workspace = true, features = ["full"] }
 reqwest = { workspace = true }
 async-trait = { workspace = true }
 serde_json = { workspace = true }
+http = { workspace = true }
