--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,8 +19,8 @@ license = "MIT"
 
 [workspace.dependencies]
 # Error handling
-anyhow = "1.0"
-thiserror = "2.0"
+anyhow = { version = "1.0", default-features = false }
+thiserror = { version = "2.0", default-features = false }
 
 # Date/Time
 chrono = { version = "0.4", default-features = false }
@@ -30,11 +30,11 @@ rust_decimal = { version = "1.35", default-features = false }
 
 # Serialization
 serde = { version = "1.0", default-features = false }
-serde_json = "1.0"
+serde_json = { version = "1.0", default-features = false }
 
 # Async runtime and HTTP client
-async-trait = "0.1"
-http = "1.0"
+async-trait = { version = "0.1", default-features = false }
+http = { version = "1.0", default-features = false }
 reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
 tokio = { version = "1.0", default-features = false }
 
