--- a/crates/schwab-api-oauth/Cargo.toml
+++ b/crates/schwab-api-oauth/Cargo.toml
@@ -10,9 +10,10 @@ description = "OAuth authentication implementation for the Schwab API"
 schwab-api-types = { path = "../schwab-api-types" }
 schwab-api-core = { path = "../schwab-api-core" }
 serde = { workspace = true, features = ["derive"] }
+serde_json = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
 reqwest = { workspace = true }
 url = { workspace = true }
 base64 = { workspace = true }
-rand = { workspace = true }
+uuid = { workspace = true, features = ["v4"] }
