--- a/crates/schwab-api-core/Cargo.toml
+++ b/crates/schwab-api-core/Cargo.toml
@@ -6,13 +6,19 @@ authors.workspace = true
 license.workspace = true
 description = "Core traits, errors, and foundational functionality for the Schwab API"
 
+[features]
+default = ["reqwest-client"]
+reqwest-client = ["dep:reqwest"]
+ureq-client = ["dep:ureq"]
+
 [dependencies]
 schwab-api-types = { path = "../schwab-api-types" }
-serde = { workspace = true, features = ["derive"] }
-serde_json = { workspace = true }
+serde = { workspace = true, features = ["derive", "std"] }
+serde_json = { workspace = true, features = ["std"] }
 thiserror = { workspace = true }
-tokio = { workspace = true, features = ["full"] }
-reqwest = { workspace = true }
-url = { workspace = true }
 async-trait = { workspace = true }
-http = { workspace = true }
+http = { workspace = true, features = ["std"] }
+
+# Optional HTTP client implementations
+reqwest = { workspace = true, optional = true }
+ureq = { version = "2.10", optional = true }
