--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,6 +45,7 @@ ureq = { version = "2.10", default-features = false, features = ["tls"] }
 # UUID and URL handling
 uuid = { version = "1.0", default-features = false }
 url = { version = "2.5", default-features = false }
+urlencoding = { version = "2.1", default-features = false }
 
 # Additional dependencies used by CLI
 base64 = "0.22"
@@ -101,6 +102,7 @@ full = ["oauth", "marketdata", "trader"]
 schwab-api = { path = "crates/schwab-api" }
 tokio = { workspace = true, features = ["full"] }
 reqwest = { workspace = true }
+ureq = { workspace = true }
 http = { workspace = true }
 
 # Individual crates for direct usage examples
