--- a/crates/schwab-api-oauth/Cargo.toml
+++ b/crates/schwab-api-oauth/Cargo.toml
@@ -14,6 +14,8 @@ serde_json = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
 reqwest = { workspace = true }
+ureq = { workspace = true }
 url = { workspace = true }
+urlencoding = { workspace = true }
 base64 = { workspace = true }
 uuid = { workspace = true, features = ["v4"] }
