--- a/tools/algo-chuck-cli/Cargo.toml
+++ b/tools/algo-chuck-cli/Cargo.toml
@@ -7,20 +7,18 @@ license.workspace = true
 description = "Command-line interface for the Schwab API toolkit"
 
 [dependencies]
-schwab-api-core = { path = "../../crates/schwab-api-core", features = ["reqwest-client", "ureq-client"] }
+schwab-api-core = { path = "../../crates/schwab-api-core", features = ["ureq-client"] }
 schwab-api-marketdata = { path = "../../crates/schwab-api-marketdata" }
 schwab-api-oauth = { path = "../../crates/schwab-api-oauth" }
 schwab-api-trader = { path = "../../crates/schwab-api-trader" }
 schwab-api-types = { path = "../../crates/schwab-api-types" }
 anyhow = { workspace = true }
-async-trait = { workspace = true }
 base64 = { workspace = true }
 chrono = { workspace = true, features = ["serde", "clock"] }
 clap = { version = "4.4", features = ["derive"] }
 config = "0.15"
 dirs = "6.0"
 rcgen = "0.14"
-reqwest = { workspace = true }
 ureq = { workspace = true }
 rustls = { version = "0.23", features = ["ring"] }
 rustls-pemfile = "2.0"
@@ -28,7 +26,6 @@ serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 toml = "0.9"
 url = { workspace = true }
-urlencoding = "2.1"
 uuid = { workspace = true, features = ["v4"] }
 webbrowser = "1.0"
 
@@ -41,7 +38,3 @@ rand = { workspace = true }
 hex = "0.4"
 sha2 = "0.10"
 time = "0.3"
-
-# Logging and tracing
-# tracing = "0.1"
-# tracing-subscriber = { version = "0.3", default-features = false }
