--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ rust_decimal = { version = "1.35", default-features = false }
 # Serialization
 serde = { version = "1.0", default-features = false }
 serde_json = { version = "1.0", default-features = false }
+serde_urlencoded = {  version = "0.7", default-features = false }
 
 # HTTP clients
 ## Async
