--- a/crates/schwab-api-marketdata/Cargo.toml
+++ b/crates/schwab-api-marketdata/Cargo.toml
@@ -7,8 +7,8 @@ license.workspace = true
 description = "Market data API client for the Schwab API"
 
 [dependencies]
-schwab-api-types = { path = "../schwab-api-types" }
-schwab-api-core = { path = "../schwab-api-core" }
+schwab-api-types = { path = "../schwab-api-types", default-features = false, features = ["marketdata"] }
+schwab-api-core = { path = "../schwab-api-core", default-features = false, features = ["marketdata", "reqwest-client", "ureq-client"] }
 schwab-api-oauth = { path = "../schwab-api-oauth" }
 serde = { workspace = true, features = ["derive"] }
 serde_urlencoded = { workspace = true }
