--- a/tools/algo-chuck-cli/Cargo.toml
+++ b/tools/algo-chuck-cli/Cargo.toml
@@ -7,11 +7,11 @@ license.workspace = true
 description = "Command-line interface for the Schwab API toolkit"
 
 [dependencies]
-schwab-api-core = { path = "../../crates/schwab-api-core", features = ["ureq-client"] }
-schwab-api-marketdata = { path = "../../crates/schwab-api-marketdata" }
-schwab-api-oauth = { path = "../../crates/schwab-api-oauth" }
-schwab-api-trader = { path = "../../crates/schwab-api-trader" }
-schwab-api-types = { path = "../../crates/schwab-api-types" }
+schwab-api-core = { path = "../../crates/schwab-api-core", default-features = false, features = ["ureq-client", "trader", "marketdata"] }
+schwab-api-marketdata = { path = "../../crates/schwab-api-marketdata", default-features = false }
+schwab-api-oauth = { path = "../../crates/schwab-api-oauth", default-features = false, features = ["ureq-client"] }
+schwab-api-trader = { path = "../../crates/schwab-api-trader", default-features = false }
+schwab-api-types = { path = "../../crates/schwab-api-types", default-features = false, features = ["trader", "marketdata"] }
 anyhow = { workspace = true }
 base64 = { workspace = true }
 chrono = { workspace = true, features = ["serde", "clock"] }
