--- a/tools/algo-chuck-cli/Cargo.toml
+++ b/tools/algo-chuck-cli/Cargo.toml
@@ -7,11 +7,8 @@ license.workspace = true
 description = "Command-line interface for the Schwab API toolkit"
 
 [dependencies]
-schwab-api-core = { path = "../../crates/schwab-api-core", default-features = false, features = ["ureq-client", "trader", "marketdata"] }
-schwab-api-marketdata = { path = "../../crates/schwab-api-marketdata", default-features = false }
-schwab-api-oauth = { path = "../../crates/schwab-api-oauth", default-features = false, features = ["ureq-client"] }
-schwab-api-trader = { path = "../../crates/schwab-api-trader", default-features = false }
-schwab-api-types = { path = "../../crates/schwab-api-types", default-features = false, features = ["trader", "marketdata"] }
+# Use only the facade crate with sync-only features (CLI doesn't need async)
+schwab-api = { path = "../../crates/schwab-api", default-features = false, features = ["trader", "marketdata", "oauth", "ureq-client"] }
 anyhow = { workspace = true }
 base64 = { workspace = true }
 chrono = { workspace = true, features = ["serde", "clock"] }
