--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,8 @@ members = [
   "crates/schwab-api-oauth", 
   "crates/schwab-api-trader", 
   "crates/schwab-api-types",
-  "tools/algo-chuck-cli"
+  "tools/cli",
+  "tools/trader",
 ]
 
 resolver = "3"
@@ -14,7 +15,7 @@ resolver = "3"
 [workspace.package]
 edition = "2024"
 version = "0.1.0"
-authors = ["Brian Kiernan <brian@algochuck.com>"]
+authors = ["Brian Kiernan <brian.kiernan@algochuck.com>"]
 license = "MIT"
 
 [workspace.dependencies]
