initial simple order executor

--- a/tools/paper/Cargo.toml
+++ b/tools/paper/Cargo.toml
@@ -22,6 +22,7 @@ axum = "0.8"
 # -- Others
 derive_more = {version = "2", features = ["from", "display"] }
 thiserror = "2"
+rand = "0.8"
 
 [dev-dependencies]
 anyhow = "1"
